--- a/src/styles/_ngx-bootstrap.scss
+++ b/src/styles/_ngx-bootstrap.scss
@@ -16,3 +16,4 @@
 @import './ngx-bootstrap/popovers';
 @import './ngx-bootstrap/tooltips';
 @import './ngx-bootstrap/nav';
+@import './ngx-bootstrap/modal';
