--- a/src/app/core/admin/admin.component.scss
+++ b/src/app/core/admin/admin.component.scss
@@ -1,14 +1,10 @@
 @import '../../../styles/overrides';
 @import '../site-container/shared';
 
+$admin-section-padding-y: $site-content-padding-y;
+
 .admin-container {
-	margin: $site-content-padding-y * -1 $site-content-padding-x * -1;
-
-	.nav-tabs {
-		padding: 16px 15px 0;
-	}
-
 	.admin-section-container {
-		padding: $site-content-padding-y $site-content-padding-x;
+		padding: $admin-section-padding-y / 2 0;
 	}
 }
