--- a/src/app/core/admin/cache-entries/cache-entries.component.html
+++ b/src/app/core/admin/cache-entries/cache-entries.component.html
@@ -9,7 +9,10 @@
 
 	<!-- Search Input -->
 	<div class="pt-2">
-		<search-table placeholder="Search key and value..." (applySearch)="onSearch($event)"></search-table>
+		<div class="d-flex mb-3 align-items-center">
+			<asy-search-input placeholder="Search key and value..." (applySearch)="onSearch($event)"
+							  style="width: 350px"></asy-search-input>
+		</div>
 
 		<pageable-table [items]="cacheEntries"
 			[pagingOptions]="pagingOpts"
