--- a/src/app/core/admin/cache-entries/cache-entry-modal.component.html
+++ b/src/app/core/admin/cache-entries/cache-entry-modal.component.html
@@ -1,15 +1,14 @@
 <section class="modal-header">
-	<h3>
+	<h2 class="modal-title">
 		Cache Entry Details
-	</h3>
-	<span class="float-right">
-		<button type="button" class="btn btn-link"
-			(click)="modalRef.hide()"
-			data-tooltip="Close"
-			data-tooltip-placement="bottom">
-			<span class="fa fa-times"></span>
-		</button>
-	</span>
+	</h2>
+	<button type="button" class="close"
+		(click)="modalRef.hide()"
+		tooltip="Close"
+		placement="bottom"
+		aria-label="Close">
+		<span class="fa fa-times" aria-hidden="true"></span>
+	</button>
 </section>
 
 <section class="modal-body">
