--- a/src/app/core/teams/add-members-modal/add-members-modal.component.html
+++ b/src/app/core/teams/add-members-modal/add-members-modal.component.html
@@ -1,16 +1,14 @@
 <section class="modal-header">
-	<h1 class="mb-0 w-100">
+	<h2 class="modal-title">
 		Add Team Members
-		<span class="float-right modal-close">
-			<a class="btn-icon"
-			   (click)="modalRef.hide()"
-			   tooltip="Close"
-			   placement="bottom"
-			   container="body">
-				<span class="fa fa-times"></span>
-			</a>
-		</span>
-	</h1>
+	</h2>
+	<button type="button" class="close"
+			(click)="modalRef.hide()"
+			tooltip="Close"
+			placement="bottom"
+			aria-label="Close">
+		<span class="fa fa-times" aria-hidden="true"></span>
+	</button>
 </section>
 
 <section class="modal-body">
@@ -72,7 +70,6 @@
 </section>
 
 <section class="modal-footer">
-	<button type="button" class="btn btn-outline-secondary" (click)="modalRef.hide()">Cancel</button>
+	<button type="button" class="btn btn-link" (click)="modalRef.hide()">Cancel</button>
 	<button type="button" class="btn btn-primary" [disabled]="addedMembers.length === 0 || submitting" (click)="submit()">Add Users</button>
 </section>
-
