--- a/src/app/core/teams/help/teams-help.component.html
+++ b/src/app/core/teams/help/teams-help.component.html
@@ -12,9 +12,9 @@
 <p>All team members receive basic 'read' access to team resources. Advanced access can be granted using the roles described below.</p>
 
 <div class="form-group site-form-group">
-	<label class="control-label">Team Admin</label>
+	<label>Team Admin</label>
 	<p>This role grants the user the ability to add/remove members of the team and to delete the team itself. Team admins will receive access requests generated from within the UI.</p>
 
-	<label class="control-label">Team Editor</label>
+	<label>Team Editor</label>
 	<p>This role grants the user the ability to create/edit/delete resources on behalf of the team.</p>
 </div>
