--- a/src/styles/ngx-bootstrap/_nav.scss
+++ b/src/styles/ngx-bootstrap/_nav.scss
@@ -9,6 +9,7 @@ $nav-tabs-border-highlight-width: 3px !default;
 
 	.nav-link {
 		border-width: 0 0 $nav-tabs-border-highlight-width;
+		font-size: $font-size-base;
 		margin: 0 1rem;
 	}
 }
