--- a/src/app/core/site-navbar/site-navbar.component.html
+++ b/src/app/core/site-navbar/site-navbar.component.html
@@ -147,7 +147,7 @@
 						</li>
 
 						<!-- Feedback -->
-						<li><a class="link"
+						<li *ngIf="showFeedbackOption"><a class="link"
 							(click)="showFeedbackModal();helpNavPopover.hide()">Give Feedback</a></li>
 
 						<!-- About -->
