--- a/src/styles/_ngx-bootstrap.scss
+++ b/src/styles/_ngx-bootstrap.scss
@@ -17,3 +17,6 @@
 @import './ngx-bootstrap/tooltips';
 @import './ngx-bootstrap/nav';
 @import './ngx-bootstrap/modal';
+
+
+@include text-emphasis-variant(".text-highlight", $ux-color-highlight);
