--- a/src/app/core/admin/user-management/admin-list-users.component.html
+++ b/src/app/core/admin/user-management/admin-list-users.component.html
@@ -21,14 +21,14 @@
 				<asy-search-input placeholder="Search..." (applySearch)="onSearch($event)"
 								  style="width: 350px"></asy-search-input>
 				<div class="btn-group float-right dropdown ml-auto" dropdown>
-					<button type="button" class="btn btn-sm btn-outline-secondary" (click)="exportCurrentView()"><span class="fa fa-download"></span> Export </button>
-					<button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle dropdown-toggle-split" dropdownToggle></button>
+					<button type="button" class="btn btn-outline-secondary" (click)="exportCurrentView()"><span class="fa fa-download"></span> Export </button>
+					<button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" dropdownToggle></button>
 					<ul *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu">
 						<li><a class="dropdown-item" (click)="exportCurrentView()" tabindex="0">Export Current View</a></li>
 						<li><a class="dropdown-item" (click)="exportUserData()" tabindex="0">Export Single Field</a></li>
 					</ul>
 				</div>
-				<button routerLink="/admin/user" type="button" class="btn btn-sm btn-primary ml-3">
+				<button routerLink="/admin/user" type="button" class="btn btn-primary ml-3">
 					<span class="fa fa-user-plus"></span> Create User
 				</button>
 			</div>
