--- a/src/app/core/feedback/admin/admin-list-feedback.component.html
+++ b/src/app/core/feedback/admin/admin-list-feedback.component.html
@@ -11,7 +11,7 @@
 		<div class="d-flex mb-3 align-items-center">
 			<asy-search-input placeholder="Search..." (applySearch)="onSearch($event)"
 							  style="width: 350px"></asy-search-input>
-			<button type="button" class="btn btn-sm btn-outline-secondary ml-auto" (click)="export()">
+			<button type="button" class="btn btn-outline-secondary ml-auto" (click)="export()">
 				<span class="fa fa-download"></span> Export
 			</button>
 		</div>
@@ -35,7 +35,7 @@
 					<div class="hide-overflow">{{ feedback?.type | titlecase }}</div>
 				</td>
 				<td>
-					<div style="width: 300px;">{{ feedback?.body }}</div>
+					<div style="width: 300px; white-space: pre-wrap">{{ feedback?.body }}</div>
 				</td>
 				<td>
 					<div class="hide-overflow">{{ feedback?.url }}</div>
